--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
+    "nest": "node --env-file=.env node_modules/@nestjs/cli/bin/nest",
+    "start": "npm run nest -- start",
+    "start:dev": "npm run nest -- start --watch",
+    "start:debug": "npm run nest -- start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"src/**/*.ts\" --fix",
     "prepare": "husky install"
@@ -15,6 +16,9 @@
     "@nestjs/common": "^10.2.8",
     "@nestjs/core": "^10.2.8",
     "@nestjs/platform-fastify": "^10.2.8",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
@@ -23,6 +27,7 @@
     "@commitlint/config-conventional": "^18.1.0",
     "@nestjs/cli": "^10.2.1",
     "@types/node": "^20.8.10",
+    "@types/pg": "^8.10.8",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "eslint": "^8.53.0",
