--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "scripts": {
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\"",
+    "format": "prettier --write \"src/**/*.ts\" \"libs/**/*.ts\"",
     "nest": "node --env-file=.env node_modules/@nestjs/cli/bin/nest",
     "start": "npm run nest -- start",
     "start:dev": "npm run nest -- start --watch",
     "start:debug": "npm run nest -- start --debug --watch",
-    "start:prod": "node dist/main",
-    "lint": "eslint \"src/**/*.ts\" --fix",
+    "start:prod": "node dist/src/main",
+    "lint": "eslint \"{src,libs}/**/*.ts\" --fix",
     "prepare": "husky install"
   },
   "dependencies": {
