--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start:debug": "npm run nest -- start --debug --watch",
     "start:prod": "node dist/src/main",
     "lint": "eslint \"{src,libs}/**/*.ts\" --fix",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "glob -c \"node --test --require ts-node/register\" \"src/**/*.spec.ts\" \"libs/**/*.spec.ts\""
   },
   "dependencies": {
     "@nestjs/common": "^10.2.8",
@@ -33,8 +34,10 @@
     "@typescript-eslint/parser": "^6.10.0",
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
+    "glob": "^10.3.10",
     "husky": "^8.0.0",
     "prettier": "^3.0.3",
+    "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
   "engines": {
